force-app/main/default/objects/Plan__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is the plan currently active?</description>
    <inlineHelpText>Is the plan currently active?</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>