force-app/main/default/objects/Plan__c/fields/Allow_Phone_Orders__c.field-meta.xml
<CustomField>
    <fullName>Allow_Phone_Orders__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Phone orders can be created for this plan by TrueCost agents.</description>
    <inlineHelpText>Phone orders can be created for this plan by TrueCost agents.</inlineHelpText>
    <label>Allow Phone Orders</label>
    <type>Checkbox</type>
</CustomField>