force-app/main/default/objects/Plan__c/fields/Archived__c.field-meta.xml
<CustomField>
    <fullName>Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box for old, inactive, or unused plans.</description>
    <inlineHelpText>Check this box for old, inactive, or unused plans.</inlineHelpText>
    <label>Archived?</label>
    <type>Checkbox</type>
</CustomField>