force-app/main/default/objects/Plan__c/fields/Available_for_priority_move_ins__c.field-meta.xml
<CustomField>
    <fullName>Available_for_priority_move_ins__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do you accept priority move-in orders for this plan?</description>
    <inlineHelpText>Do you accept priority move-in orders for this plan?</inlineHelpText>
    <label>Available for priority move-ins</label>
    <type>Checkbox</type>
</CustomField>