force-app/main/default/objects/Plan__c/fields/Cancellation_Fee__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Fee__c</fullName>
    <description>What is the fee if the customer cancels the plan before the contract expires?</description>
    <inlineHelpText>What is the fee if the customer cancels the plan before the contract expires?</inlineHelpText>
    <label>Cancellation Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>