force-app/main/default/objects/Plan__c/fields/Cancellation_Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Fee_Type__c</fullName>
    <label>Cancellation Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
                <default>true</default>
                <label>Fixed</label>
            </value>
            <value>
                <fullName>Prorated by remaining months</fullName>
            </value>
            <value>
                <fullName>Per remaining month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>