force-app/main/default/objects/Plan__c/fields/Card_Required_For_Payment__c.field-meta.xml
<CustomField>
    <fullName>Card_Required_For_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A credit/Debit card is required for this plan&#39;s bill payment.</description>
    <inlineHelpText>A credit/Debit card is required for this plan&#39;s bill payment.</inlineHelpText>
    <label>Credit/Debit Card Required for Payment</label>
    <type>Checkbox</type>
</CustomField>