force-app/main/default/objects/Plan__c/fields/Contract_Length__c.field-meta.xml
<CustomField>
    <fullName>Contract_Length__c</fullName>
    <description>In months, how long is the contract?</description>
    <inlineHelpText>In months, how long is the contract?</inlineHelpText>
    <label>Contract Length (# of months)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>