force-app/main/default/objects/Plan__c/fields/Credit_Check_Required__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Does the plan require a credit check?</description>
    <inlineHelpText>Does the plan require a credit check?</inlineHelpText>
    <label>Credit Check Required</label>
    <type>Checkbox</type>
</CustomField>