force-app/main/default/objects/Plan__c/fields/Credit_Debit_Card_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Credit_Debit_Card_Requirements__c</fullName>
    <description>Are cards optional, required, or not used for payment for this plan?</description>
    <inlineHelpText>Are cards optional, required, or not used for payment for this plan?</inlineHelpText>
    <label>Credit/Debit Card Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Optional</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Unused</fullName>
                <default>true</default>
                <label>Unused</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>