force-app/main/default/objects/Plan__c/fields/Full_Requirements_Premium__c.field-meta.xml
<CustomField>
    <fullName>Full_Requirements_Premium__c</fullName>
    <description>goes into the adder for full requirements premium</description>
    <inlineHelpText>goes into the adder for full requirements premium</inlineHelpText>
    <label>Full Requirements Premium</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>