force-app/main/default/objects/Plan__c/fields/Green_ranking__c.field-meta.xml
<CustomField>
    <fullName>Green_ranking__c</fullName>
    <description>How does this plan rank amongst other plans with regards to renewable content.  A higher percentage denotes a higher amount of renewable content vs. other plans.</description>
    <inlineHelpText>How does this plan rank amongst other plans with regards to renewable content.  A higher percentage denotes a higher amount of renewable content vs. other plans.</inlineHelpText>
    <label>Green ranking</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>