force-app/main/default/objects/Plan__c/fields/Gross_Receipts_Tax__c.field-meta.xml
<CustomField>
    <fullName>Gross_Receipts_Tax__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the gross receipts tax included in the default energy rate?</description>
    <inlineHelpText>Is the gross receipts tax included in the default energy rate?</inlineHelpText>
    <label>Gross Receipts Tax</label>
    <type>Checkbox</type>
</CustomField>