force-app/main/default/objects/Plan__c/fields/Link_Off__c.field-meta.xml
<CustomField>
    <fullName>Link_Off__c</fullName>
    <description>Sign up link off URL</description>
    <inlineHelpText>Provide link for the completion of the sign up process</inlineHelpText>
    <label>Link Off</label>
    <type>Url</type>
</CustomField>