force-app/main/default/objects/Plan__c/fields/Margin_per_Dth__c.field-meta.xml
<CustomField>
    <fullName>Margin_per_Dth__c</fullName>
    <description>How much do we want to make per customer per Dth?</description>
    <inlineHelpText>How much do we want to make per customer per Dth?</inlineHelpText>
    <label>Margin per Dth</label>
    <precision>8</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>