force-app/main/default/objects/Plan__c/fields/Maximum_Annual_Usage__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Annual_Usage__c</fullName>
    <defaultValue>99999999999999</defaultValue>
    <description>What is the maximum kWh that a customer could use last year and be able to see this plan?</description>
    <inlineHelpText>What is the maximum kWh that a customer could use last year and be able to see this plan?  Use this feature to create &quot;bands&quot; of pricing based on usage</inlineHelpText>
    <label>Maximum Annual Usage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>