force-app/main/default/objects/Plan__c/fields/Minimum_Annual_Usage__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Annual_Usage__c</fullName>
    <description>How many kWh per year must a customer have used in the last 12 months in order to qualify for this plan?</description>
    <inlineHelpText>How many kWh per year must a customer have used in the last 12 months in order to qualify for this plan?</inlineHelpText>
    <label>Minimum Annual Usage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>