force-app/main/default/objects/Plan__c/fields/Miscellaneous_Gross_Receipts_Tax__c.field-meta.xml
<CustomField>
    <fullName>Miscellaneous_Gross_Receipts_Tax__c</fullName>
    <defaultValue>true</defaultValue>
    <description>A fee assessed to recover the miscellaneous gross receipts tax imposed on retail electric providers operating in an incorporated city or town having a population of more than 1,000.  Checking this adds the fee to plan details.</description>
    <inlineHelpText>A fee assessed to recover the miscellaneous gross receipts tax imposed on retail electric providers operating in an incorporated city or town having a population of more than 1,000.  Checking this adds the fee to plan details.</inlineHelpText>
    <label>Add Miscellaneous Gross Receipts Tax</label>
    <type>Checkbox</type>
</CustomField>