force-app/main/default/objects/Plan__c/fields/Movers_or_Switchers__c.field-meta.xml
<CustomField>
    <fullName>Movers_or_Switchers__c</fullName>
    <description>Who should see this plan?</description>
    <inlineHelpText>Who should see this plan?</inlineHelpText>
    <label>Movers or Switchers</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Movers only</fullName>
            </value>
            <value>
                <fullName>Switchers only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>