force-app/main/default/objects/Plan__c/fields/New_or_Existing__c.field-meta.xml
<CustomField>
    <fullName>New_or_Existing__c</fullName>
    <description>Who should see this plan</description>
    <inlineHelpText>Who should see this plan</inlineHelpText>
    <label>New or Existing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>New customers only</fullName>
            </value>
            <value>
                <fullName>My Existing customers only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>