force-app/main/default/objects/Plan__c/fields/Online_Payment_Bill_Stements__c.field-meta.xml
<CustomField>
    <fullName>Online_Payment_Bill_Stements__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the plan requires customers to use online payment and billing.  Opt-out fees can be set at the Rate level if applicable to this plan.</description>
    <inlineHelpText>Check this box if the plan requires customers to use online payment and billing.  Opt-out fees can be set at the Rate level if applicable to this plan.</inlineHelpText>
    <label>Online Payment &amp; Billing Required</label>
    <type>Checkbox</type>
</CustomField>