force-app/main/default/objects/Plan__c/fields/Plan_Description__c.field-meta.xml
<CustomField>
    <fullName>Plan_Description__c</fullName>
    <description>Information shown to the customers who want more detail about this plan</description>
    <inlineHelpText>Information shown to the customers who want more detail about this plan</inlineHelpText>
    <label>Plan Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>