force-app/main/default/objects/Plan__c/fields/Plan_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Plan_End_Date__c</fullName>
    <description>When should the plan not be displayed or available to customers?</description>
    <inlineHelpText>When should the plan not be displayed or available to customers?</inlineHelpText>
    <label>Plan End Date</label>
    <type>Date</type>
</CustomField>