force-app/main/default/objects/Plan__c/fields/Plan_ID__c.field-meta.xml
<CustomField>
    <fullName>Plan_ID__c</fullName>
    <description>Code used by the REP to refer to this plan</description>
    <inlineHelpText>Code used by the REP to refer to this plan</inlineHelpText>
    <label>Plan ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>