force-app/main/default/objects/Plan__c/fields/Plan_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Plan_Start_Date__c</fullName>
    <description>When should the plan be displayed and available to customers?</description>
    <inlineHelpText>When should the plan be displayed and available to customers?</inlineHelpText>
    <label>Plan Start Date</label>
    <type>Date</type>
</CustomField>