force-app/main/default/objects/Plan__c/fields/PUC_fee__c.field-meta.xml
<CustomField>
    <fullName>PUC_fee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the PUC fee included in the default energy rate?</description>
    <inlineHelpText>Is the PUC fee included in the default energy rate?</inlineHelpText>
    <label>PUC fee</label>
    <type>Checkbox</type>
</CustomField>