force-app/main/default/objects/Plan__c/fields/Rate_Class_del__c.field-meta.xml
<CustomField>
    <fullName>Rate_Class_del__c</fullName>
    <description>What rate class is this plan available for?</description>
    <inlineHelpText>What rate class is this plan available for?</inlineHelpText>
    <label>Rate Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
                <default>true</default>
                <label>Residential</label>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>