force-app/main/default/objects/Plan__c/fields/Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Rate_Type__c</fullName>
    <description>What type of plan is this?</description>
    <inlineHelpText>What type of plan is this?</inlineHelpText>
    <label>Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
                <default>true</default>
                <label>Fixed</label>
            </value>
            <value>
                <fullName>Variable</fullName>
            </value>
            <value>
                <fullName>Index</fullName>
            </value>
            <value>
                <fullName>SmartFixed</fullName>
            </value>
            <value>
                <fullName>SmartBill</fullName>
            </value>
            <value>
                <fullName>SmartCap</fullName>
            </value>
            <value>
                <fullName>SmartBlended</fullName>
            </value>
            <value>
                <fullName>Blended</fullName>
            </value>
            <value>
                <fullName>IndexNoSpread</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>