force-app/main/default/objects/Plan__c/fields/Renewable_Content__c.field-meta.xml
<CustomField>
    <fullName>Renewable_Content__c</fullName>
    <description>What percent of the electricity comes from renewable sources?</description>
    <inlineHelpText>What percent of the electricity comes from renewable sources?</inlineHelpText>
    <label>Renewable Content (in %)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>