force-app/main/default/objects/Plan__c/fields/REP_Profile__c.field-meta.xml
<CustomField>
    <fullName>REP_Profile__c</fullName>
    <label>REP Profile</label>
    <referenceTo>REP_Profile__c</referenceTo>
    <relationshipLabel>Plans</relationshipLabel>
    <relationshipName>Plans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>