force-app/main/default/objects/Plan__c/fields/Sales_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Sales_Taxes__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Are local sales taxes included in the default rates? Check the box to add this to the plan details.</description>
    <inlineHelpText>Are local sales taxes included in the default rates? Check the box to add this to the plan details.</inlineHelpText>
    <label>Add Sales Taxes</label>
    <type>Checkbox</type>
</CustomField>