force-app/main/default/objects/Plan__c/fields/SG_Pricing_Resolution_Primary_Th__c.field-meta.xml
<CustomField>
    <fullName>SG_Pricing_Resolution_Primary_Th__c</fullName>
    <description>how close should the offer prices be, per THERM</description>
    <inlineHelpText>how close should the offer prices be, per THERM</inlineHelpText>
    <label>SG Pricing Resolution Primary Th</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>