force-app/main/default/objects/Plan__c/fields/SG_Pricing_Resolution_Secondary_Th__c.field-meta.xml
<CustomField>
    <fullName>SG_Pricing_Resolution_Secondary_Th__c</fullName>
    <defaultValue>0.05</defaultValue>
    <description>per THERM.  Secondary is like the cap on a cap, the index on a blended/smartBlended, and the DPA on a smartFixed.</description>
    <inlineHelpText>per THERM.  Secondary is like the cap on a cap, the index on a blended/smartBlended, and the DPA on a smartFixed.</inlineHelpText>
    <label>SG Pricing Resolution Secondary Th</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>