force-app/main/default/objects/Plan__c/fields/Single_or_Multifamily__c.field-meta.xml
<CustomField>
    <fullName>Single_or_Multifamily__c</fullName>
    <description>Who should see this plan?</description>
    <inlineHelpText>Who should see this plan?</inlineHelpText>
    <label>Single or Multifamily</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Single-Family only</fullName>
            </value>
            <value>
                <fullName>Multi-Family only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>