force-app/main/default/objects/Plan__c/fields/Smart_Meter_Required__c.field-meta.xml
<CustomField>
    <fullName>Smart_Meter_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the plan require a customer to have a smart meter?</description>
    <inlineHelpText>Does the plan require a customer to have a smart meter?</inlineHelpText>
    <label>Smart Meter Required</label>
    <type>Checkbox</type>
</CustomField>