force-app/main/default/objects/Plan__c/recordTypes/C_I_Product.recordType-meta.xml
<RecordType>
    <fullName>C_I_Product</fullName>
    <active>true</active>
    <description>Products that are available for transport customers</description>
    <label>C&amp;I Product</label>
</RecordType>