force-app/main/default/objects/Plan__c/recordTypes/Electric_Plan.recordType-meta.xml
<RecordType>
    <fullName>Electric_Plan</fullName>
    <active>true</active>
    <label>Electric Plan</label>
</RecordType>