force-app/main/default/objects/Plan__c/recordTypes/Gas_Choice_Plan.recordType-meta.xml
<RecordType>
    <fullName>Gas_Choice_Plan</fullName>
    <active>true</active>
    <label>Gas Choice Plan</label>
</RecordType>