force-app/main/default/objects/Plan__c/validationRules/Plan_Name_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>Plan_Name_Length</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Record_Type_Name__c = &quot;Electric Plan&quot;, LEN(Name)&gt; 42)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Plan02: The maximum length of the plan name is 42 characters.</errorMessage>
</ValidationRule>