force-app/main/default/objects/Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Suspended__c</columns>
    <columns>REP_Profile__c</columns>
    <columns>Plan_Start_Date__c</columns>
    <columns>Plan_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>