force-app/main/default/objects/Plan__c/listViews/Credit_Debit_Card_Required.listView-meta.xml
<ListView>
    <fullName>Credit_Debit_Card_Required</fullName>
    <columns>REP_Profile__c</columns>
    <columns>NAME</columns>
    <columns>Plan_ID__c</columns>
    <columns>Active__c</columns>
    <columns>Plan_Start_Date__c</columns>
    <columns>Plan_End_Date__c</columns>
    <columns>Rate_Type__c</columns>
    <columns>Rate_Class_del__c</columns>
    <columns>Contract_Length__c</columns>
    <columns>Renewable_Content__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Card_Required_For_Payment__c</columns>
    <columns>Credit_Debit_Card_Requirements__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Credit_Debit_Card_Requirements__c</field>
        <operation>equals</operation>
        <value>Required</value>
    </filters>
    <label>Credit/Debit Card Required</label>
    <language>en_US</language>
    <sharedTo>
        <group>Administrators_System</group>
    </sharedTo>
</ListView>