force-app/main/default/objects/Plan__c/listViews/Gas_Choice_Plans.listView-meta.xml
<ListView>
    <fullName>Gas_Choice_Plans</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>REP_Profile__c</columns>
    <columns>Rate_Type__c</columns>
    <columns>Contract_Length__c</columns>
    <columns>Margin_per_Dth__c</columns>
    <columns>Full_Requirements_Premium__c</columns>
    <columns>SG_Pricing_Resolution_Primary_Th__c</columns>
    <columns>SG_Pricing_Resolution_Secondary_Th__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Plan__c.Gas_Choice_Plan</value>
    </filters>
    <filters>
        <field>REP_Profile__c</field>
        <operation>equals</operation>
        <value>CenterPoint Energy Services</value>
    </filters>
    <label>Gas Choice Plans</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>