force-app/main/default/objects/Plan__c/listViews/Last_change_view.listView-meta.xml
<ListView>
    <fullName>Last_change_view</fullName>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>REP_Profile__c</columns>
    <columns>NAME</columns>
    <columns>Plan_End_Date__c</columns>
    <columns>Plan_Start_Date__c</columns>
    <columns>Active__c</columns>
    <columns>Contract_Length__c</columns>
    <columns>Renewable_Content__c</columns>
    <filterScope>Everything</filterScope>
    <label>Last change view</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>